<resources>
    <string name="app_name">Robot</string>

    <string name="menu_status">Stato</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="unive_logo_jpg">unive Logo jpg</string>
    <string name="lego_logo_jpg">lego logo jpg</string>
    <string name="calendarButton">Calendario</string>
    <string name="menuText">MENU</string>
    <string name="stateText">Stato</string>
    <string name="add_new_event">Aggiungi Nuovo Evento</string>
    <string name="save">salva</string>
    <string name="day">Giorno</string>
    <string name="time">Ora</string>
    <string name="colour">Colore</string>
    <string name="repetition">Ripetizione</string>
    <string name="single">Singola</string>
    <string name="daily">Giornaliera</string>
    <string name="weekly">Settimanale</string>
    <string name="modalityText">Ripetizione</string>
    <string name="red_ball">Rosso</string>
    <string name="red_number" />
    <string name="blue_ball">Blue</string>
    <string name="blue_number" />
    <string name="yellow_ball">Giallo</string>
    <string name="yellow_number" />
    <string name="green_ball">Green</string>
    <string name="green_number" />
    <string name="calendario">Calendario</string>
    <string name="alarm">Allarmi</string>
    <string name="elimante_event_button_text">Elimina</string>
    <string name="eliminate_event_text">Elimina evento</string>
    <string name="calendar_text">Calendario</string>
    <string name="calendarStateButton">Stato</string>
    <string-array name="days_array">
        <item>Lunedì</item>
        <item>Martedì</item>
        <item>Mercoledì</item>
        <item>Giovedì</item>
        <item>Venerdì</item>
        <item>Sabato</item>
        <item>Domenica</item>
    </string-array>
    <string-array name="short_days_array">
        <item>L</item>
        <item>M</item>
        <item>M</item>
        <item>G</item>
        <item>V</item>
        <item>S</item>
        <item>D</item>
    </string-array>
    <string-array name="void_days_array">
        <item>-</item>
    </string-array>
    <string-array name="occurrency_array">
        <item>Singola</item>
        <item>Giornaliera</item>
        <item>Settimanale</item>
    </string-array>
    <string name="title_activity_eliminate_event">EliminateEvent</string>
    <string name="redLogo" />
    <string name="yellowLogo" />
    <string name="greenLogo" />
    <string name="blueLogo" />
    <string name="alarmText" />
    <string name="textview">TextView</string>
</resources>
