<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityApp.AddEvent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/addNewEventText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:text="@string/menu_status"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/addEventGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintGuide_begin="120dp"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/redBall"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/redLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addNewEventText"
            app:srcCompat="@drawable/red" />

        <TextView
            android:id="@+id/redNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="124dp"
            android:text="@string/red_number"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/addEventGuideline"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/blueBall"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/blueLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/redBall"
            app:srcCompat="@drawable/blue" />

        <TextView
            android:id="@+id/blueNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="196dp"
            android:text="@string/blue_number"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/addEventGuideline"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/yellowBall"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/yellowLogo"
            app:layout_constraintEnd_toEndOf="@+id/yellowNumber"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toEndOf="@+id/redNumber"
            app:layout_constraintTop_toBottomOf="@+id/addNewEventText"
            app:srcCompat="@drawable/yellow" />

        <TextView
            android:id="@+id/yellowNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="124dp"
            android:text="@string/yellow_number"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/addEventGuideline"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/greenBall"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/green_ball"
            app:layout_constraintEnd_toEndOf="@+id/greenNumber"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/blueNumber"
            app:layout_constraintTop_toBottomOf="@+id/yellowBall"
            app:srcCompat="@drawable/green" />

        <TextView
            android:id="@+id/greenNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="196dp"
            android:text="@string/green_number"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/addEventGuideline"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/calendarStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="36dp"
            android:text="@string/calendario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmButton" />

        <TextView
            android:id="@+id/alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="174dp"
            android:text="@string/alarm"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/addEventGuideline"
            app:layout_constraintTop_toBottomOf="@+id/addNewEventText" />

        <TextView
            android:id="@+id/alarmText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="52dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm"
            tools:text="@string/alarmText" />

        <Button
            android:id="@+id/alarmButton"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:text="Risolvi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/alarmText"
            app:layout_constraintTop_toBottomOf="@+id/alarm" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>